--- a/produtos.html
+++ b/produtos.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - Barbearia Alura</title>
 
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./produtos.css">
+    <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/responsivo.css">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
     <footer>
         <img src="./imagens/logo-branco.png" alt="">
         <p class="copyright">
-            &copy; Copyright Barbearia Alura - 2023
+            &copy; Copyright Barbearia Alura - Luma Mantelli - 2023
         </p>
     </footer>
 </body>
