--- a/contato.html
+++ b/contato.html
@@ -90,7 +90,7 @@
     <footer>
         <img src="./imagens/logo-branco.png" alt="Logo da Barbearia Alura">
         <p class="copyright">
-            &copy; Copyright Barbearia Alura - 2023
+            &copy; Copyright Barbearia Alura - Luma Mantelli - 2023
         </p>
     </footer>
 </body>
